<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/background_laranja_test">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="IFome Russas"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackgroundOrange" />

    <EditText
        android:id="@+id/editTextLoginId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:fadingEdge="none"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="17dp"
        android:singleLine="false"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white" />

    <EditText
        android:id="@+id/editTextPasswordId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:fadingEdge="none"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="17dp"
        android:singleLine="false"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_button"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/button_text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/firstDivider"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorBackgroundOrange" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="24dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="OU"
            android:textColor="@color/colorGrey"
            android:textSize="15sp" />

        <View
            android:id="@+id/secondDivider"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorBackgroundOrange" />

    </LinearLayout>

    <com.shobhitpuri.custombuttons.GoogleSignInButton
        android:id="@+id/btLoginGoogleId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/google_sign_up" />

    <com.facebook.login.widget.LoginButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"/>

</LinearLayout>